# TestANN2

./: .gitignore  CMakeLists.txt  DataGenerator  DataGenerator.c  GenerateData  GenerateSets  GenerateSets.c  GenerateSets.cpp  NNRun.c  a.out  datafile.txt  testingfile.txt  trainingfile.txt
